--- a/Requirements.txt
+++ b/Requirements.txt
@@ -370,6 +370,8 @@ sympy==1.14.0
 tables==3.10.1
 tabulate==0.9.0
 tblib==1.7.0
+transformers
+
 tenacity==8.2.3
 tensorboard-data-server==0.7.2
 tensorboard==2.19.0
