--- a/Requirements.txt
+++ b/Requirements.txt
@@ -370,7 +370,7 @@ sympy==1.14.0
 tables==3.10.1
 tabulate==0.9.0
 tblib==1.7.0
-transformers
+transformers==4.30.2
 
 tenacity==8.2.3
 tensorboard-data-server==0.7.2
